--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -6,6 +6,29 @@
 </head>
 <body>
     <h1>Basic Curry Recipe</h1>
-    
+    <img src="../images/#" alt="Curry Photo">
+    <h2>Description</h2>
+        <p>This curry is a very simple recipe that can be made in a large pan for about 3-4 people to enjoy. That is, unless you're cooking for yourself, in which case leftovers for quite a few meals!</p>
+
+        <p>The base of the curry is sautéed onions in olive oil with the spices added just after browning. Then, add in your other desired ingredients, letting them mix with the spices. And finally, top it all off with some cocnut cream and water to create that delicious curry sauce. Plate it all up with a bed of rice, and enjoy a wonderful party in your mouth!</p>
+
+    <h2><strong>Ingredients</strong></h2>
+        <ul>
+            <li>1 large onion - diced</li>
+            <li>1 table spoon olive oil</li>
+            <li>2-3 table spoons curry powder of choice</li>
+            <li>1/2 tablespoon garam masala</li>
+            <li>salt and pepper to taste</li>
+            <li>1 800gr can of (drained) chick peas</li>
+            <li>1 chorizo sausage - chopped (optional)</li>
+            <li>1-2 bell peppers (or other vegetable(s) of choice) - chopped</li>
+            <li>400ml coconut cream*</li>
+            <li>200ml water*</li>
+        </ul>
+        <p><em>* = liquid ratio dependant on pan size and how runny you want your curry to be. It should (mostly) cover your ingredients for optimal cooking, especially if you want to add a raw meat of your choice.</em></p>
+
+        <ol>
+            <li></li>
+        </ol>
 </body>
 </html>
