add curry recipe steps and disclaimers

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -25,10 +25,19 @@
             <li>400ml coconut cream*</li>
             <li>200ml water*</li>
         </ul>
-        <p><em>* = liquid ratio dependant on pan size and how runny you want your curry to be. It should (mostly) cover your ingredients for optimal cooking, especially if you want to add a raw meat of your choice.</em></p>
+        
 
         <ol>
+            <li>Heat olive oil over medium heat and sauté the diced onion until browned.</li>
+            <li>Add all spices and mix around to lightly toast.</li>
+            <li>Incorporate your choice veggies and chick peas making sure to mix them well with the spice coating.**</li>
+            <li>Add the chorizo (if desired; otherwise, skip this step).</li>
+            <li>Add the coconut cream and water and mix well to incorporate the liquids all throughout the dish</li>
+            <li></li>
             <li></li>
         </ol>
+        
+        <p><em>* = liquid ratio dependant on pan size and how runny you want your curry to be. It should (mostly) cover your ingredients for optimal cooking, especially if you want to add a raw meat of your choice.</em></p>
+        <p><em>** = if raw meat is a desired addition, add it just before the veggies for propper coating and to add a quick cooking of the exterior for texture.</em></p>
 </body>
 </html>
