--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -22,6 +22,7 @@
             <li>1 800gr can of (drained) chick peas</li>
             <li>1 chorizo sausage - chopped (optional)</li>
             <li>1-2 bell peppers (or other vegetable(s) of choice) - chopped</li>
+            <li>1-2 handfulls of chopped leafy greens (if desired)</li>
             <li>400ml coconut cream*</li>
             <li>200ml water*</li>
         </ul>
@@ -32,9 +33,10 @@
             <li>Add all spices and mix around to lightly toast.</li>
             <li>Incorporate your choice veggies and chick peas making sure to mix them well with the spice coating.**</li>
             <li>Add the chorizo (if desired; otherwise, skip this step).</li>
-            <li>Add the coconut cream and water and mix well to incorporate the liquids all throughout the dish</li>
-            <li></li>
-            <li></li>
+            <li>Add the coconut cream and water and mix well to incorporate the liquids all throughout the dish.</li>
+            <li>Let it cook together for 10-15 minutes (or 30 minutes if using raw meat).</li>
+            <li>(Optional) Add leafy greens about 5 minutes before the end to avoid having soggy greens. However, sogginess is inevitable if eating leftovers, fyi.</li>
+            <li>Plate up with a bed of rice and enjoy!</li>
         </ol>
         
         <p><em>* = liquid ratio dependant on pan size and how runny you want your curry to be. It should (mostly) cover your ingredients for optimal cooking, especially if you want to add a raw meat of your choice.</em></p>
