add links in index.html to new recipe pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/curry.html">Basic Curry Recipe</a>
-        
+        <ul>
+        <li><a href="../odin-recipes/recipes/curry.html">Basic Curry</a></li>
+        <li><a href="../odin-recipes/recipes/omelette.html">Basic Omelette</a></li>
+        <li><a href="../odin-recipes/recipes/stirFry.html">Basic Stir Fry (with a twist!)</a></li>
+        </ul>
     </body>
 </html>
