add Ingredient template to omelette.html and stirFry.html

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -6,6 +6,37 @@
 </head>
 <body>
     <h1>Basic Omelette</h1>
-    
+    <img src="../images/#" alt="Omelette">
+
+    <h2>Description</h2>
+        <p>What can you really say that would make this omelette stand out from the rest? Nothing, really. It's just a basic omelette with maybe some extra spices. Though, I don't really add milk to mine, mostly 'cause my stomache would hate me for it.</p>
+
+        <p>I'm pretty basic, and that's quite alright with me</p>
+
+        <h2><strong>Ingredients</strong></h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        
+
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
 </body>
 </html>
