--- a/recipes/stirFry.html
+++ b/recipes/stirFry.html
@@ -6,6 +6,37 @@
 </head>
 <body>
     <h1>Basic Stir Fry (with a twist!)</h1>
-    
+    <img src="../images/#" alt="Stir Fry with a Red Bean Twist">
+    <h2>Description</h2>
+        <p></p>
+
+        <p></p>
+
+    <h2><strong>Ingredients</strong></h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        
+
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
 </body>
 </html>
