add full recipe to omelette.html

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -15,28 +15,22 @@
 
         <h2><strong>Ingredients</strong></h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>4 eggs</li>
+            <li>1/2 tablespoon olive oil (could replace with meat fat from cooking)</li>
+            <li>salt and pepper (to taste)</li>
+            <li>spices (optional)</li>
+            <li>other add-ins like spinach (optional)</li>
         </ul>
         
 
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Crack open the eggs.</li>
+            <li>Add your salt and pepper to taste and any other spice(s) you're feeling at the time.</li>
+            <li>(Optional) Add your leafy green veg here so they don't completely desintigrate in the pan.</li>
+            <li>Heat pan to medium heat.</li>
+            <li>(Optional) Cook your chopped meat, like bacon, leaving everything in the pan.</li>
+            <li>Add your eggs (just after your meat is done, if added) and cook until you have a pancake looking solid (about 3 minutes), then flip carefully to finish cooking.</li>
+            <li>Plate up, add your favorite sauce (I like Chipotle Tabasco!), and enjoy!</li>
         </ol>
 </body>
 </html>
