add recipe to stirFry.html

--- a/recipes/stirFry.html
+++ b/recipes/stirFry.html
@@ -8,35 +8,30 @@
     <h1>Basic Stir Fry (with a twist!)</h1>
     <img src="../images/#" alt="Stir Fry with a Red Bean Twist">
     <h2>Description</h2>
-        <p></p>
+        <p>Who doesn't love a good Stir Fry? It's one of the easiest things to make, and generally only takes about 10 minutes to throw together. Therefore, a fantastic go to meal at the end of a long work day (hopefully you have rice premade or a quick way to make some).</p>
 
-        <p></p>
+        <p>However, let's spice things up a little (pun intended, 100%). How about adding some beans to the party? I know, seems weird. But trust me, it's worth it!</p>
+
+        <p><em>please note: there are no measurements because I don't measure anything in this recipe as I just eye-ball as I go. Not the smartest move for everybody, but it works for me.</em></p>
 
     <h2><strong>Ingredients</strong></h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>chopped broccoli</li>
+            <li>chopped carrots</li>
+            <li>1 can of red beans</li>
+            <li>neutral oil</li>
+            <li>sesame oil</li>
+            <li>rice vinegar</li>
+            <li>fish sauce</li>
+            <li>low-sodium soy sauce (don't judge!)</li>
         </ul>
         
 
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Heat pan to medium-high heat and add your neutral oil.</li>
+            <li>Throw in your carrots and broccoli, making sure not to stir too often (kind of an ironic concept, right?).</li>
+            <li>After about 5 minutes, add in your beans along with your liquids to taste, cooking for an additional 5 minutes, or so.</li>
+            <li>Plate up over a bed of rice and enjoy!</li>
         </ol>
 </body>
 </html>
